@@ -1,6 +1,6 @@
 Package: car
 Version: 2.0-19
-Date: 2013/06/17
+Date: 2013/06/20
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
