@@ -1,4 +1,4 @@
-# last modified 2013-06-17 by J. Fox
+# last modified 2013-06-20 by J. Fox
 
 export(
     basicPowerAxis,
@@ -140,6 +140,7 @@ S3method(Anova, lm)
 S3method(Anova, lme)
 S3method(Anova, manova)
 S3method(Anova, mer)
+S3method(Anova, merMod)
 S3method(Anova, multinom)
 S3method(Anova, mlm)
 S3method(Anova, polr)
@@ -169,6 +170,7 @@ S3method(deltaMethod, nls)
 S3method(deltaMethod, survreg)
 S3method(deltaMethod, coxph)
 S3method(deltaMethod, mer)
+S3method(deltaMethod, merMod)
 S3method(deltaMethod, lme)
 S3method(deltaMethod, lmList)
 S3method(densityPlot, default)
@@ -197,6 +199,7 @@ S3method(linearHypothesis, glm)
 S3method(linearHypothesis, lm)
 S3method(linearHypothesis, lme)
 S3method(linearHypothesis, mer)
+S3method(linearHypothesis, merMod)
 S3method(linearHypothesis, mlm)
 S3method(linearHypothesis, polr)
 S3method(linearHypothesis, svyglm)
@@ -205,6 +208,7 @@ S3method(Manova, mlm)
 S3method(matchCoefs, default)
 S3method(matchCoefs, lme)
 S3method(matchCoefs, mer)
+S3method(matchCoefs, merMod)
 S3method(matchCoefs, mlm)
 S3method(mmp, default)
 S3method(mmp, lm)
