@@ -8,6 +8,7 @@
 %   2012-02-28 updated to reflect new test.statistic argument to Anova.mer(). J. Fox
 %   2012-03-01 removed commented-out output listings. J. Fox
 %   2013-06-17 update for summary.Anova.mlm and print.summary.Anova.mlm. J. Fox
+%   2013-06-20 added Anova.merMod(). J. Fox
 %-------------------------------------------------------------------------------
 
 \name{Anova}
@@ -19,6 +20,7 @@
 \alias{Anova.multinom}
 \alias{Anova.polr}
 \alias{Anova.mer}
+\alias{Anova.merMod}
 \alias{Anova.mlm}
 \alias{Anova.manova}
 \alias{Manova}
@@ -90,6 +92,9 @@ Manova(mod, ...)
 
 \method{Anova}{mer}(mod, type=c("II","III", 2, 3), 
 	test.statistic=c("chisq", "F"), vcov.=vcov(mod), singular.ok, ...)
+    
+\method{Anova}{merMod}(mod, type=c("II","III", 2, 3), 
+    test.statistic=c("chisq", "F"), vcov.=vcov(mod), singular.ok, ...)
 		
 \method{Anova}{svyglm}(mod, ...)
 	
@@ -100,7 +105,7 @@ Manova(mod, ...)
 
 \arguments{
   \item{mod}{\code{lm}, \code{aov}, \code{glm}, \code{multinom}, \code{polr}
-    \code{mlm}, \code{coxph}, \code{lme}, \code{mer}, \code{svyglm} or other suitable model object.}
+    \code{mlm}, \code{coxph}, \code{lme}, \code{mer}, \code{merMod}, \code{svyglm} or other suitable model object.}
   \item{error}{for a linear model, an \code{lm} model object from which the
     error sum of squares and degrees of freedom are to be calculated. For 
     F-tests for a generalized linear model, a \code{glm} object from which the
